# English-russian-dict

./: .gitignore  CMakeLists.txt  main.cpp
.github/: build.sh
.github-tests/: expected1.txt  input1.txt
.github-tests/scripts/: run.sh
.github/scripts/: build.sh  content.sh  run.sh  test.sh  work_tree.sh
.github/tests/error/: error_1.txt  error_2.txt  error_3.txt  error_4.txt  error_5.txt  error_6.txt  error_7.txt
.github/tests/files/: file_1.txt  file_4.txt  file_6.txt  file_7.txt
.github/tests/input/: input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt
.github/tests/output/: output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt
.github/workflows/: ci.yml  testing.yml
src/: dict.hpp  initial_test.hpp  map.hpp  map_base.hpp  pair.hpp  parser.hpp  processor.hpp  set.hpp  vector.hpp
src/forward-list/: declaration.hpp  iterator.hpp  node.hpp
src/main-logic/: dict.cpp  parser.cpp  processor.cpp
src/map/: access.hpp  declaration.hpp  definition.hpp  modifiers.hpp  rotations.hpp
src/map_base/: access.hpp  access_iterators.hpp  construct_destruct.hpp  declaration.hpp  erase.hpp  insert.hpp  iterator.hpp  modifiers.hpp  node.hpp  value_compare.hpp
src/parser/: format_guard.cpp  format_guard.hpp  parser.cpp
src/vector/: access.hpp  construct_destruct.hpp  declaration.hpp  inserts.hpp  iterator.hpp  modifiers.hpp
test/: initial_test.cpp  map.cpp  map_test.cpp  plug.cpp  set.cpp  vector_tests.cpp
test/map/: construct.cpp
